welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:8: error: type mismatch;
 found   : Unit
 required: Boolean
      recule()
            ^SlugTracking:12: error: Boolean does not take parameters
  else{return(caseVerte())}
                       ^