welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  var caseVerte:Boolean = false
  if(!estFaceMur()){
    avance()
    if(getCouleurSol()==Color.green){
      caseVerte = true
      recule()
    }
    else(return(caseVerte))
  }
  else{return(caseVerte())}
}